@@ -1,3 +1,9 @@
+2007-06-16  Gustavo J. A. M. Carneiro  <gjc@gnome.org>
+
+	* gobject/propertyhelper.py,
+	* tests/test_properties.py: Support type=GObject or
+	type=TYPE_OBJECT in the new properties API.
+
 2007-06-06  Yevgen Muntyan  <muntyan@tamu.edu>
 
 	OK'd by Johan
